remove java8 BASE64 depenedency from transport project